# poetry_101

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/packageA/: main.py  utils.py
src/packageB/: main.py  utils.py
